Fixed dispaly of buttons

--- a/releases/version 3.0.25.1.html
+++ b/releases/version 3.0.25.1.html
@@ -87,22 +87,19 @@
                         </td>
                       </tr>
                       <tr>
-                        <td style='padding:30.0pt 0cm 30.0pt 0cm;border-radius:3px'>
-                          <div align=center>
-                            <table border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse'>
+                        <td align="center" style="padding-top:40px;padding-bottom:40px;">
+                          <table border="0" cellspacing="0" cellpadding="0" style="border-collapse:collapse;">
+                            <tbody>
                               <tr>
-                                <td style='background:#0052CC;padding:0cm 0cm 0cm 0cm;display:inline-block;border-radius: 3px'>
-                                  <p align=center style='text-align:center'>
-                                    <a href="https://github.com/Macrix/procontel/blob/master/Articles/IntroducingGrpc.md" target="_blank" style='display:inline-block;border-radius: 3px'>
-                                      <span lang=EN-US style='font-size:12.0pt;font-family:"Helvetica",sans-serif; color:white;border:solid #0052CC 1.0pt;padding:11.0pt;text-decoration:none;'>
-                                        Read more
-                                      </span>
-                                    </a>
-                                  </p>
+                                <td align="center" style="background-color:#0052CC;border-radius:3px;">
+                                  <a href="https://github.com/Macrix/procontel/blob/master/Articles/IntroducingGrpc.md"
+                                     target="_blank"
+                                     style="color:white;font-size:16px;font-family:Helvetica neue,Helvetica,Arial,Verdana,sans-serif;display:inline-block;text-decoration:none;border-radius:3px;padding:15px 40px;border:1px solid #0052CC;">
+                                     Read more</a>
                                 </td>
                               </tr>
-                            </table>
-                          </div>
+                            </tbody>
+                          </table>
                         </td>
                       </tr>
                       <tr>
@@ -295,7 +292,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td style='padding:30.0pt 15.0pt 0cm 15.0pt'>
+                        <td style='padding:15.0pt 15.0pt 0cm 15.0pt'>
                           <p style='line-height:16.5pt'>
                             <span lang=EN-US style='font-size:12.0pt;font-family:"Helvetica",sans-serif;color:#42526E;'>
                               If you're interested in latest ProconTEL <b>v3.0.25.1 RC</b> or want to find more comprehensive information,
@@ -305,22 +302,19 @@
                         </td>
                       </tr>
                       <tr>
-                        <td style='padding:30.0pt 0cm 30.0pt 0cm;border-radius:3px'>
-                          <div align=center>
-                            <table border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse'>
+                        <td align="center" style="padding-top:40px;padding-bottom:40px;">
+                          <table border="0" cellspacing="0" cellpadding="0" style="border-collapse:collapse;">
+                            <tbody>
                               <tr>
-                                <td style='background:#0052CC;padding:0cm 0cm 0cm 0cm;display:inline-block;border-radius: 3px'>
-                                  <p align=center style='text-align:center'>
-                                    <a href="https://macrix.sharepoint.com/sites/Project/SitePages/ProconTEL-Downloads.aspx" target="_blank" style='display:inline-block;border-radius: 3px'>
-                                      <span lang=EN-US style='font-size:12.0pt;font-family:"Helvetica",sans-serif; color:white;border:solid #0052CC 1.0pt;padding:11.0pt;text-decoration:none;'>
-                                        Download
-                                      </span>
-                                    </a>
-                                  </p>
+                                <td align="center" style="background-color:#0052CC;border-radius:3px;">
+                                  <a href="https://macrix.sharepoint.com/sites/Project/SitePages/ProconTEL-Downloads.aspx"
+                                     target="_blank"
+                                     style="color:white;font-size:16px;font-family:Helvetica neue,Helvetica,Arial,Verdana,sans-serif;display:inline-block;text-decoration:none;border-radius:3px;padding:15px 40px;border:1px solid #0052CC;">
+                                    Download</a>
                                 </td>
                               </tr>
-                            </table>
-                          </div>
+                            </tbody>
+                          </table>
                         </td>
                       </tr>
                     </table>
@@ -333,11 +327,6 @@
                     <table border=0 cellspacing=0 cellpadding=0 style='width:100.0%;border-collapse:collapse'>
                       <tr>
                         <td style='padding:30.0pt 0cm 0cm 15.0pt'>
-                          <!-- <p align=center style='text-align:center;line-height:26.25pt'>
-                            <b><span lang=EN-US style='font-size:18.0pt;font-family:"Helvetica",sans-serif;color:#253858'>
-                             Release
-                            </span></b>
-                          </p> -->
                           <p align=center style='text-align:center'>
                             <a href="https://macrix.eu/">
                               <img border=0 width=116 height=32 src="https://github.com/Macrix/procontel/raw/master/releases/assets/macrix_logo.png">
