small adjustments in release email

--- a/releases/version 3.0.25.1.html
+++ b/releases/version 3.0.25.1.html
@@ -78,7 +78,7 @@
                         <td style='padding:30.0pt 15.0pt 0cm 15.0pt'>
                           <p style='line-height:16.5pt'>
                             <span lang=EN-US style='font-size:12.0pt;font-family:"Helvetica",sans-serif;color:#42526E;'>
-                              Release v3.0.25.1 is here and it contains an exciting feature - gRPC communication mode, 
+                              Release v3.0.25.1 is here, and it contains an exciting feature - gRPC communication mode, 
                               which replaces used so far WCF. This is a first
                               step on the way of replacing WCF with gRPC. There is still a lot ahead of
                               us, but we wanted to share with you this feature and hear your opinion.
@@ -155,7 +155,7 @@
                                                       <td style='padding:7.5pt 0cm 0cm 0cm'>
                                                         <p style='line-height:16.5pt'>
                                                           <span lang=EN-US style='font-size:12.0pt;font-family:"Helvetica",sans-serif;color:#253858'>
-                                                            Switching ProconTEL to gRPC needed serious changes which altered it's core functionality - communication. 
+                                                            Switching ProconTEL to gRPC needed serious changes which altered its core functionality - communication. 
                                                             But stay calm, we know what we are doing...we are engineers.
                                                             Anyway, since some time we are monitoring performance and we have good news – our changes
                                                             did not make it worse <span lang=EN-US style='font-size:12.0pt;font-family:"Segoe UI Emoji",sans-serif;color:#253858'>&#128521;</span>
@@ -242,7 +242,7 @@
                                                       <td style='padding:7.5pt 0cm 0cm 0cm'>
                                                         <p style='line-height:16.5pt'>
                                                           <span style='font-size:12.0pt;font-family:"Helvetica",sans-serif;color:#253858'>
-                                                            ProconTEL libraries are available as nuget packages and published to Macrix Nuget server. 
+                                                            ProconTEL libraries are available as nuget packages and published to Macrix nuget server. 
                                                             Next time when you need to add a ProconTEL reference in your application maybe use nuget?
                                                           </span>
                                                         </p>
