--- a/releases/version 3.0.25.1.html
+++ b/releases/version 3.0.25.1.html
@@ -32,7 +32,7 @@
                                 <td style='padding:0cm 0cm 0cm 0cm'>
                                   <p align=center style='text-align:center'>
                                     <a href="https://macrix.sharepoint.com/sites/Project/SitePages/ProconTEL-Downloads.aspx" target="_blank">
-                                      <img width=220 src="https://github.com/Macrix/procontel/raw/master/releases/assets/procontel_logo_old.png">
+                                      <img width=220 src="https://github.com/Macrix/procontel/raw/master/releases/assets/procontel_positive_small.png" />
                                     </a>
                                   </p>
                                 </td>
